Added event listener to insert tasks into the 'task-list' div when form is sent.

--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 </head>
 <body>
 
-    <div id="contenido">
+    <div id="content">
         <div class="container">
 
             <h1>Local Storage</h1>
             <div class="row">
                 <div class="six columns">
-                    <label for="tweet">Task:</label>
-                    <form action="#" id="formulario">
-                            <label for="tweet"></label>
-                            <textarea id="tweet" class="u-full-width"></textarea>
-                            <input type="submit" class="button u-full-width button-primary" value="Agregar">
+                    <label for="task">Task:</label>
+                    <form action="#" id="form">
+                            <label for="task"></label>
+                            <textarea id="task" class="u-full-width"></textarea>
+                            <input type="submit" class="button u-full-width button-primary" value="Add">
                     </form>
                 </div>
                 <div class="six columns">
                     <h2>My TODOs</h2>
-                    <div id="tweet-list"></div>
+                    <div id="task-list"></div>
                 </div>
             </div>
 
         </div>
-    </div> <!--#contenido-->
+    </div> <!--#content-->
 
     <script src="assets/js/app.js"></script>
 </body>
