--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="content">
         <div class="container">
 
-            <h1>Local Storage</h1>
+            <h1>Minimal Task Manager</h1>
             <div class="row">
                 <div class="six columns">
                     <label for="task">Task:</label>
@@ -25,7 +25,7 @@
                     </form>
                 </div>
                 <div class="six columns">
-                    <h2>My TODOs</h2>
+                    <h2>Task List</h2>
                     <div id="task-list"></div>
                 </div>
             </div>
